Add access and refresh token auth flow