@@ -57,27 +57,35 @@ docker compose up -d
 - Скачать: https://adoptium.net/temurin/releases/?version=21
 - Установить и задать `JAVA_HOME` перед запуском
 
-### 2. Настройка переменных окружения (опционально)
+### 2. Настройка Telegram (опционально)
 
-Создайте файл `.env` (не коммитить в git!):
+Telegram-токен и chat_id задаются через переменные окружения. Не добавляйте реальный токен в git.
+
+```powershell
+$env:TELEGRAM_BOT_TOKEN="123456789:AA_example_bot_token"
+$env:TELEGRAM_CHAT_ID="856994240"
 ```
-TELEGRAM_BOT_TOKEN=ваш_токен_бота
-TELEGRAM_CHAT_ID=856994240
-```
+
+Если Telegram не нужен, эти переменные можно не задавать. Приложение запустится, а уведомления в Telegram будут пропущены.
 
 ### 3. Запуск приложения
 
-```bash
-mvn spring-boot:run
+Запуск через PowerShell с Maven Wrapper:
+
+```powershell
+$env:JAVA_HOME=(Get-ChildItem "C:\Program Files\Eclipse Adoptium" -Directory -Filter "jdk-21*" | Select-Object -First 1).FullName
+$env:TELEGRAM_BOT_TOKEN="123456789:AA_example_bot_token"
+$env:TELEGRAM_CHAT_ID="856994240"
+.\mvnw.cmd spring-boot:run
 ```
 
-Для запуска через PowerShell с Maven Wrapper и Telegram:
+Если Java 21 установлена в другой папке, укажите точный путь к JDK вместо команды поиска.
+
+Если используется Java 25, для сборки с тестами нужен дополнительный параметр:
 
 ```powershell
 $env:JAVA_HOME="C:\Program Files\Eclipse Adoptium\jdk-25.0.3.9-hotspot"
-$env:TELEGRAM_BOT_TOKEN="ваш_токен_бота"
-$env:TELEGRAM_CHAT_ID="856994240"
-.\mvnw.cmd spring-boot:run
+.\mvnw.cmd -DargLine="-Dnet.bytebuddy.experimental=true" clean package
 ```
 
 ### 4. Swagger UI
@@ -97,14 +105,34 @@ curl -X POST http://localhost:8080/api/auth/login \
 Ответ:
 ```json
 {
-  "token": "eyJhbGciOiJIUzI1NiJ9...",
+  "accessToken": "eyJhbGciOiJIUzI1NiJ9...",
+  "refreshToken": "eyJhbGciOiJIUzI1NiJ9...",
   "tokenType": "Bearer",
   "username": "admin",
   "roles": ["ADMIN"]
 }
 ```
 
-В Swagger нажмите **Authorize** и введите токен.
+`accessToken` используется в Swagger **Authorize** и в заголовке `Authorization: Bearer <accessToken>`.
+`refreshToken` используется только для обновления токенов:
+
+```bash
+curl -X POST http://localhost:8080/api/auth/refresh \
+  -H "Content-Type: application/json" \
+  -d '{"refreshToken":"<refreshToken>"}'
+```
+
+Ответ refresh возвращает новый `accessToken` и новый `refreshToken`.
+
+В Swagger нажмите **Authorize** и введите accessToken.
+
+### Краткая проверка требований
+
+1. `POST /api/auth/login` с `admin/admin123` должен вернуть `accessToken`, `refreshToken`, `tokenType`.
+2. В Swagger **Authorize** вставьте `accessToken`, затем вызовите `GET /api/buildings` - должен быть `200 OK`.
+3. `POST /api/auth/refresh` с `refreshToken` должен вернуть новую пару `accessToken` и `refreshToken`.
+4. Если вставить `refreshToken` в Swagger **Authorize** и вызвать `GET /api/buildings`, должен быть отказ `401` или `403`.
+5. `POST /api/auth/logout` с текущим `refreshToken` должен вернуть `204 No Content`; повторный refresh с этим токеном должен завершиться ошибкой.
 
 ## Тестовые пользователи
 
@@ -120,7 +148,7 @@ curl -X POST http://localhost:8080/api/auth/login \
 
 ```bash
 curl -X POST http://localhost:8080/api/readings \
-  -H "Authorization: Bearer <token>" \
+  -H "Authorization: Bearer <accessToken>" \
   -H "Content-Type: application/json" \
   -d '{"sensorId":1,"value":99.9}'
 ```
@@ -131,7 +159,7 @@ curl -X POST http://localhost:8080/api/readings \
 
 ```bash
 curl -X POST http://localhost:8080/api/incidents/1/photos \
-  -H "Authorization: Bearer <token>" \
+  -H "Authorization: Bearer <accessToken>" \
   -F "file=@photo.jpg"
 ```
 
@@ -141,7 +169,7 @@ CSV-формат: `inventoryNumber,type,status,roomId,thresholdValue`
 
 ```bash
 curl -X POST http://localhost:8080/api/import/sensors/csv \
-  -H "Authorization: Bearer <token>" \
+  -H "Authorization: Bearer <accessToken>" \
   -F "file=@docs/examples/sensors.csv"
 ```
 
@@ -149,7 +177,7 @@ curl -X POST http://localhost:8080/api/import/sensors/csv \
 
 ```bash
 curl -X GET "http://localhost:8080/api/reports/alerts/pdf?dateFrom=2024-01-01T00:00:00&dateTo=2030-12-31T23:59:59" \
-  -H "Authorization: Bearer <token>" \
+  -H "Authorization: Bearer <accessToken>" \
   --output report.pdf
 ```
 
@@ -157,7 +185,7 @@ curl -X GET "http://localhost:8080/api/reports/alerts/pdf?dateFrom=2024-01-01T00
 
 ```bash
 curl -X GET "http://localhost:8080/api/reports/alerts/xlsx?dateFrom=2024-01-01T00:00:00&dateTo=2030-12-31T23:59:59" \
-  -H "Authorization: Bearer <token>" \
+  -H "Authorization: Bearer <accessToken>" \
   --output report.xlsx
 ```
 
@@ -189,8 +217,8 @@ TELEGRAM_CHAT_ID=856994240
 ## Проверка CRUD через Swagger
 
 1. Откройте http://localhost:8080/swagger-ui/index.html
-2. Выполните `POST /api/auth/login` → скопируйте token
-3. Нажмите **Authorize**, введите token
+2. Выполните `POST /api/auth/login` → скопируйте accessToken
+3. Нажмите **Authorize**, введите accessToken
 4. Тестируйте любые endpoint'ы
 
 ## Запуск тестов
